fixing centering of social links in footer on mobile

--- a/css/scss/modules/marketing/_footer.scss
+++ b/css/scss/modules/marketing/_footer.scss
@@ -39,6 +39,10 @@
       .social-centered {
         width: 250px;
         margin: 0 auto;
+
+        @include swb-medium {
+          width: 100px;
+        }
       }
     }
 
